--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
